<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_app"
    android:layout_height="match_parent"
    tools:context=".ui.view.home.fragment.HomeFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/country_app"
        android:textStyle="bold"
        android:textSize="40sp"
        android:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toTopOf="@+id/region"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continents"
        android:layout_marginHorizontal="16dp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/region"/>

    <TextView
        android:id="@+id/tvSubRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sub_continents"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvRegion" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSubRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSubRegion"/>

</androidx.constraintlayout.widget.ConstraintLayout>