<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_app"
    android:layout_height="match_parent"
    tools:context=".ui.view.search.fragment.DetailFragment">

    <TextView
        android:id="@+id/tvDetailTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:text=".Prueba" />

    <ImageView
        android:id="@+id/ivHeart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_favborder_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDetailCountry"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:padding="1dp"
        android:background="@color/black"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailTittle" />

    <TextView
        android:id="@+id/tvDetailCapital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/capital"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailTittle" />

    <TextView
        android:id="@+id/tvCapital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailCapital"
        tools:text=".Prueba" />

    <TextView
        android:id="@+id/tvPopulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/population"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCapital" />

    <TextView
        android:id="@+id/tvNumberPopulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPopulation"
        tools:text=".Prueba" />

    <TextView
        android:id="@+id/tvContinentTittle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:gravity="end"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailCountry"
        app:layout_constraintBottom_toTopOf="@id/tvSubContinentTittle"
        android:text="@string/continent_detail"/>

    <TextView
        android:id="@+id/tvSubContinentTittle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/cvMap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContinentTittle"
        android:text="@string/subcontinent_detail"/>
    <TextView
        android:id="@+id/tvContinent"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tvSubContinent"
        app:layout_constraintTop_toBottomOf="@+id/ivDetailCountry"
        app:layout_constraintStart_toEndOf="@+id/tvContinentTittle"
        tools:text=".Prueba"/>

    <TextView
        android:id="@+id/tvSubContinent"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/cvMap"
        app:layout_constraintTop_toBottomOf="@+id/tvContinentTittle"
        app:layout_constraintStart_toEndOf="@+id/tvSubContinentTittle"
        tools:text=".Prueba"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMap"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="20dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>